Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 1.3.1
-
None
Description
If I use pkg-config in the project file for qmake ( PKGCONFIG +=), it will add include directories to the Makefile and such. However, QtCreator does not recognize these and marks included headers as missing, auto-completion does not work, etc.
Apparently, the functionality is already there, however not for qt4 projects:
http://www.mail-archive.com/qt-creator@trolltech.com/msg01275.html
It should be included there as well, as the usage of pkg-config is a well documented part of qmake usage. Manually setting INCLUDEPATH renders the pkg-config concept useless and leads to heartache in distributed development environments.