Take QMAKE_CXXFLAGS into account for additional INCLUDEPATHS

This also fixes pkg-config support for the code model.

Task-Nr: QTCREATORBUG-976